<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="124dp"
        android:layout_marginTop="20dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <TextView
            android:id="@+id/loginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:fontFamily="@font/comfortaa_bold"
            />

        <TextView
            android:id="@+id/loginSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:fontFamily="@font/comfortaa_bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="57dp"
        android:layout_height="81dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:onClick="deleteUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/recycle_bin" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="57dp"
        android:layout_height="81dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="logout"
        app:srcCompat="@drawable/ic_sign_out_option" />


</androidx.constraintlayout.widget.ConstraintLayout>